# MazeBlaze

./: 1_Read_LSA.c  README.md
0_lsa_with_pwm/main/: CMakeLists.txt  main.c
2_motor_driver_pwm/: sdkconfig
2_motor_driver_pwm/main/: main.c
5_line_following/: sdkconfig  sdkconfig.old
5_line_following/main/: a.out  main.c  trial.c
6_lfr/: sdkconfig.defaults
6_lfr/main/: lsa.c  main.c
assets/: Readme.md
components/: CMakeLists.txt
components/include/: line_following.h  lsa.h  mazeblaze2.h  pin_defs.h  rotary_encoder.h
components/src/: lsa.c  rotary_encoder.c
documentation/: Readme.md
firmware/0_lsa_with_pwm/: CMakeLists.txt
firmware/10_line_follow_with_degree/: CMakeLists.txt  sdkconfig.old
firmware/1_lsa/: Readme.md
firmware/2_motor_driver_pwm/: CMakeLists.txt  Readme.md
firmware/3_encoder_degree/: CMakeLists.txt  rotary_encoder.c
firmware/3_encoders/: CMakeLists.txt  sdkconfig
firmware/4_Encoders/: CMakeLists.txt
firmware/4_encoders/: CMakeLists.txt  sdkconfig.old
firmware/4_encoders_new/: sdkconfig  sdkconfig.old
firmware/4_line_following/: CMakeLists.txt  Readme.md
firmware/5_left_follow/: CMakeLists.txt  Readme.md  sdkconfig  sdkconfig.old
firmware/5_line_following/: CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/6_boot/: sdkconfig
firmware/6_simplify_path/: CMakeLists.txt  Readme.md
firmware/6_turn_and_line_follow/: sdkconfig
firmware/7_left_follow/: main.c
firmware/7_line_follow_with_degree/: CMakeLists.txt  sdkconfig
firmware/9_dfs/: main.c
firmware/components/: CMakeLists.txt  Kconfig
(+48 files in other folders)
